--- a/jupyter_explore/Mergetables.ipynb
+++ b/jupyter_explore/Mergetables.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(102528, 10)\n"
+      "footprintWKT                      object\npolygonID                          int64\ndecimalLatitude                  float64\ndecimalLongitude                 float64\ncoordinateUncertaintyInMeters    float64\nhabitat                           object\nsamplingProtocol                  object\nsampleSizeValue                  float64\nsampleSizeUnit                    object\npolyarea                         float64\ndtype: object\n"
      ]
     },
     {
@@ -108,7 +108,7 @@
        "footprintWKT                      object\npolygonID                          int64\ndecimalLatitude                  float64\ndecimalLongitude                 float64\ncoordinateUncertaintyInMeters    float64\nhabitat                           object\nsamplingProtocol                  object\nsampleSizeValue                  float64\nsampleSizeUnit                    object\npolyarea                         float64\ndtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
     "\n",
     "plottable=mergedplottable.groupby('footprintWKT').first().reset_index()\n",
     "\n",
-    "print(plottable.shape)\n",
+    "print(plottable.dtypes)\n",
     "\n",
     "plottable.to_csv(filepath+'plottable.csv',sep=\";\",index=False)\n",
     "\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
