last minute changes in merging

--- a/jupyter_explore/Mergetables.ipynb
+++ b/jupyter_explore/Mergetables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,9 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "speciesKey          int64\nspecies            object\nkingdom            object\nphylum             object\nclass              object\norder              object\nfamily             object\ngenus              object\nspecificEpithet    object\nvernacularName     object\ndtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filepath=\"C:\\\\zsofia\\\\Amsterdam\\\\Work\\\\Teaching\\\\KZs_BiodiversityandGlobalChange\\\\GBIF_Data\\\\step2\\\\\"\n",
     "\n",
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
