--- a/jupyter_explore/mergewithcorrectid.ipynb
+++ b/jupyter_explore/mergewithcorrectid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -44,11 +44,47 @@
     "obstable.to_csv(filepath+'observationtable.csv',sep=\";\",index=False)\n",
     "\n",
     "plottable=mergedtable[[\"polygonID\",\"decimalLatitude\",\"decimalLongitude\",\"coordinateUncertaintyInMeters\",\"footprintWKT\",\n",
-    "                       \"habitat\",\"samplingProtocol\",\"sampleSizeUnit\",\"polyarea \"]]\n",
+    "                       \"habitat\",\"samplingProtocol\",\"sampleSizeUnit\",\"sampleSizeValue\",\"polyarea \"]]\n",
     "\n",
     "plottable=plottable.groupby('footprintWKT').first().reset_index()\n",
     "\n",
+    "plottable=plottable[[\"polygonID\",\"decimalLatitude\",\"decimalLongitude\",\"coordinateUncertaintyInMeters\",\"footprintWKT\",\n",
+    "                       \"habitat\",\"samplingProtocol\",\"sampleSizeUnit\",\"sampleSizeValue\",\"polyarea \"]]\n",
+    "\n",
     "plottable.to_csv(filepath+'plottable.csv',sep=\";\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shapely.wkt import loads\n",
+    "from geopandas import GeoDataFrame\n",
+    "\n",
+    "geometry = plottable['footprintWKT'].map(loads)\n",
+    "crs = {'init': 'epsg:18992'}\n",
+    "geovegdb_dataframe = GeoDataFrame(plottable[\"polygonID\"], crs=crs, geometry=geometry)\n",
+    "geovegdb_dataframe.to_file(filepath+\"DutchVegDB.shp\", driver='ESRI Shapefile')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "filepath=\"C:\\\\zsofia\\\\Amsterdam\\\\Work\\\\Teaching\\\\KZs_BiodiversityandGlobalChange\\\\GBIF_Data\\\\step2\\\\\"\n",
+    "\n",
+    "plot=pd.read_csv(filepath+'plottable.csv',sep=';',encoding='latin-1')\n",
+    "plot.dtypes\n",
+    "\n",
+    "plot=plot[[\"polygonID\",\"decimalLatitude\",\"decimalLongitude\",\"coordinateUncertaintyInMeters\",\"footprintWKT\",\n",
+    "                       \"habitat\",\"samplingProtocol\",\"sampleSizeValue\",\"sampleSizeUnit\",\"polyarea \"]]\n",
+    "\n",
+    "plot.to_csv(filepath+'plottable.csv',sep=\";\",index=False)"
    ]
   },
   {
