extract ID, nofsp, maxorg, mainsp

--- a/jupyter_explore/InfoBScProject.ipynb
+++ b/jupyter_explore/InfoBScProject.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "filepath=\"C:\\\\zsofia\\\\Amsterdam\\\\GitHub\\\\ecolidar\\\\Annotation\\\\Data\\\\\"\n",
+    "filepath=\"D:\\\\GitHub\\\\eEcoLiDAR\\\\Annotation\\\\Data\\\\\"\n",
     "\n",
     "speciestable=pd.read_csv(filepath+'speciestable.csv',sep=';',encoding='latin-1')\n",
     "plottable=pd.read_csv(filepath+'plottable.csv',sep=';',encoding='latin-1')\n",
@@ -18,39 +19,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(512548, 9)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "observation_up2007=observationtable[(observationtable[\"year\"]>2007)]\n",
-    "observation_up2007.shape"
+    "Filter the polygons between 2007 and 2015 -- AHN2 was measured between 2008-2012"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observationtable_up2007=observationtable[(observationtable[\"year\"]>2007)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join: observation table to plottable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined_obsplot=pd.merge(observationtable_up2007, plottable, on='polygonID', how='left')\n",
+    "joined_obsplot = joined_obsplot[list(joined_obsplot.columns[~joined_obsplot.columns.duplicated()])]\n",
+    "joined_obsplot_forest=joined_obsplot[(joined_obsplot[\"habitat\"]==\"Forest\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Groupby : polygonID, number of observed species,maximum of organismquantity"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pandas.core.groupby.DataFrameGroupBy object at 0x000001F259E01748>\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "agghow={'speciesKey':['count','first'], 'organismQuantity':['max']}\n",
+    "groupby=joined_obsplot_forest.sort_values('organismQuantity', ascending=False).groupby('polygonID').agg(agghow).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
    "source": [
     ""
    ]
