export -- still errors in the code

--- a/jupyter_explore/InfoBScProject.ipynb
+++ b/jupyter_explore/InfoBScProject.ipynb
@@ -61,21 +61,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "agghow={'speciesKey':['count','first'], 'organismQuantity':['max']}\n",
-    "groupby=joined_obsplot_forest.sort_values('organismQuantity', ascending=False).groupby('polygonID').agg(agghow).reset_index()"
+    "groupby=joined_obsplot_forest.sort_values('organismQuantity', ascending=False).groupby('polygonID').agg(agghow).reset_index()\n",
+    "\n",
+    "groupby.to_csv(filepath+'forInfoBSc.csv',sep=\";\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "polygonID           int64\nspeciesKey          int64\nspeciesKey.1        int64\norganismQuantity    int64\ndtype: object"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GroupbyForinfoBScTable=pd.read_csv(filepath+'forInfoBSc.csv',sep=';',encoding='latin-1')\n",
+    "GroupbyForinfoBScTable.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "ForInfoBSc_joinedcoordinates=pd.merge(GroupbyForinfoBScTable, plottable[['polygonID','footprintWKT']], on='polygonID', how='left')\n",
+    "\n",
+    "#this is not working string to number in specieskey\n",
+    "ForInfoBSc_JoinedCoordinates_DomTax=pd.merge(ForInfoBSc_joinedcoordinates, speciestable, on='speciesKey', how='left')\n",
+    "\n",
+    "ForInfoBSc_joinedcoordinates.to_csv(filepath+'ForInfoBSc_JoinedCoordinates.csv',sep=\";\",index=False)"
    ]
   },
   {
