tables for tree selection

--- a/jupyter_explore/InfoBScProject.ipynb
+++ b/jupyter_explore/InfoBScProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -22,12 +22,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Extract table for Daniel for tree species selection (into excel)\n",
+    "- all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speciestable.to_excel(filepath+'SpeciesTableOriginal.xlsx',encoding='latin-1',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Filter the polygons between 2007 and 2015 -- AHN2 was measured between 2008-2012"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,13 +60,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "joined_obsplot=pd.merge(observationtable_up2007, plottable, on='polygonID', how='left')\n",
     "joined_obsplot = joined_obsplot[list(joined_obsplot.columns[~joined_obsplot.columns.duplicated()])]\n",
     "joined_obsplot_forest=joined_obsplot[(joined_obsplot[\"habitat\"]==\"Forest\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract table for Daniel for tree species selection (into excel)\n",
+    "- just for forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SpeciesTable_OnlyForest_from2007=pd.merge(joined_obsplot_forest, speciestable, on='speciesKey', how='left')\n",
+    "SpeciesTable_OnlyForest_from2007=SpeciesTable_OnlyForest_from2007[['species','kingdom','phylum','class','order','family','genus','specificEpithet',\n",
+    "                                                                   'vernacularName ']]\n",
+    "SpeciesTable_OnlyForest_from2007=SpeciesTable_OnlyForest_from2007.groupby('species').first().reset_index()\n",
+    "\n",
+    "SpeciesTable_OnlyForest_from2007.to_excel(filepath+'SpeciesTableJustForestFrom2007.xlsx',encoding='latin-1',index=False)"
    ]
   },
   {
@@ -73,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "polygonID           int64\nspeciesKey          int64\nspeciesKey.1        int64\norganismQuantity    int64\ndtype: object"
+       "polygonID              int64\nnofspecies             int64\nspeciesKey             int64\nmaxorganismQuantity    int64\ndtype: object"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,16 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "ForInfoBSc_joinedcoordinates=pd.merge(GroupbyForinfoBScTable, plottable[['polygonID','footprintWKT']], on='polygonID', how='left')\n",
     "\n",
-    "#this is not working string to number in specieskey\n",
     "ForInfoBSc_JoinedCoordinates_DomTax=pd.merge(ForInfoBSc_joinedcoordinates, speciestable, on='speciesKey', how='left')\n",
     "\n",
-    "ForInfoBSc_joinedcoordinates.to_csv(filepath+'ForInfoBSc_JoinedCoordinates.csv',sep=\";\",index=False)"
+    "ForInfoBSc_JoinedCoordinates_DomTax=ForInfoBSc_JoinedCoordinates_DomTax[(ForInfoBSc_JoinedCoordinates_DomTax[\"maxorganismQuantity\"]>50)]\n",
+    "\n",
+    "ForInfoBSc_JoinedCoordinates_DomTax.to_csv(filepath+'ForInfoBSc_JoinedCoordinates.csv',sep=\";\",index=False)"
    ]
   },
   {
