--- a/jupyter_explore/forInfoBScProject.ipynb
+++ b/jupyter_explore/forInfoBScProject.ipynb
@@ -2,10 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import the Dutch Vegetation database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath=\"D:\\\\GitHub\\\\eEcoLiDAR\\\\Annotation\\\\Data\\\\\"\n",
+    "\n",
+    "speciestable=pd.read_csv(filepath+'speciestable.csv',sep=';',encoding='latin-1')\n",
+    "plottable=pd.read_csv(filepath+'plottable.csv',sep=';',encoding='latin-1')\n",
+    "observationtable=pd.read_csv(filepath+'observationtable.csv',sep=';',encoding='latin-1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract necessary information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observationtable_up2007=observationtable[(observationtable[\"year\"]>2000)]\n",
+    "\n",
+    "joined_obsplot=pd.merge(observationtable_up2007, plottable, on='polygonID', how='left')\n",
+    "joined_obsplot = joined_obsplot[list(joined_obsplot.columns[~joined_obsplot.columns.duplicated()])]\n",
+    "joined_obsplot_forest=joined_obsplot[(joined_obsplot[\"habitat\"]==\"Forest\")]\n",
+    "\n",
+    "joined_db=pd.merge(joined_obsplot_forest, speciestable, on='speciesKey', how='left')\n",
+    "joined_db.dtypes\n",
+    "\n",
+    "joined_db.to_excel(filepath+'joined_db.xlsx',encoding='latin-1',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
