--- a/jupyter_explore/forInfoBScProject.ipynb
+++ b/jupyter_explore/forInfoBScProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"D:\\\\GitHub\\\\eEcoLiDAR\\\\Annotation\\\\Data\\\\\"\n",
+    "filepath=\"C:\\\\zsofia\\\\Amsterdam\\\\GitHub\\\\eEcoLiDAR\\\\Annotation\\Data\\\\\"\n",
     "\n",
     "speciestable=pd.read_csv(filepath+'speciestable.csv',sep=';',encoding='latin-1')\n",
     "plottable=pd.read_csv(filepath+'plottable.csv',sep=';',encoding='latin-1')\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,45 @@
     "\n",
     "joined_obsplot=pd.merge(observationtable_up2007, plottable, on='polygonID', how='left')\n",
     "joined_obsplot = joined_obsplot[list(joined_obsplot.columns[~joined_obsplot.columns.duplicated()])]\n",
-    "joined_obsplot_forest=joined_obsplot[(joined_obsplot[\"habitat\"]==\"Forest\")]\n",
     "\n",
-    "joined_db=pd.merge(joined_obsplot_forest, speciestable, on='speciesKey', how='left')\n",
+    "joined_db=pd.merge(joined_obsplot, speciestable, on='speciesKey', how='left')\n",
     "joined_db.dtypes\n",
     "\n",
     "joined_db.to_excel(filepath+'joined_db.xlsx',encoding='latin-1',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db=pd.read_excel(filepath+'joined_db.xlsx',encoding='latin-1',index=False)\n",
+    "\n",
+    "db=db[['polygonID','year','organismQuantity','coordinateUncertaintyInMeters','footprintWKT','habitat',\n",
+    "       'species']]\n",
+    "\n",
+    "db.to_csv(filepath+'joined_db2.csv',sep=';',encoding='latin-1')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "polygonID                          int64\neventID                           object\nspeciesKey                        object\nyear                               int64\nmonth                              int64\nday                                int64\neventDate                         object\norganismQuantity                 float64\norganismQuantityType              object\ndecimalLatitude                  float64\ndecimalLongitude                 float64\ncoordinateUncertaintyInMeters    float64\nfootprintWKT                      object\nhabitat                           object\nsamplingProtocol                  object\nsampleSizeValue                  float64\nsampleSizeUnit                    object\npolyarea                         float64\nspecies                           object\nkingdom                           object\nphylum                            object\nclass                             object\norder                             object\nfamily                            object\ngenus                             object\nspecificEpithet                   object\nvernacularName                    object\ndtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_db.dtypes"
    ]
   },
   {
